# aeqi

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INDEXER.md  README.md  RELEASES.md  node_modules  package.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  quality-gates.yml  release.yml  solana-protocol.yml
.observations/: aeiq-onchain-harden-2026-05-06.md  autonomous-push-state.md  blueprint-flow-audit-2026-05-05.md  canonical-configs-audit-2026-05-05.md  cleanup-2026-05-06.md  inbox-streaming-brief-2026-05-09.md  route-audit-2026-05-05-v5.md  route-audit-2026-05-05.md  ux-v3-2026-05-05.md  ux-v4-2026-05-05.md  ux-v6-2026-05-05.md  ux-v8-2026-05-05.md  ux-v9-2026-05-05.md  vps-dogfood-v4-2026-05-05.md
.observations/ux-v3/: raw.json
.observations/ux-v4/: raw.json
.observations/ux-v6/: raw.json
.observations/ux-v8/: raw.json
.observations/ux-v9/: raw.json
aeqi-cli/: Cargo.toml
aeqi-cli/src/: cli.rs  helpers.rs  main.rs
aeqi-cli/tests/: setup_first_run.rs
apps/ui/: CLAUDE.md  README.md  eslint.config.mjs  package-lock.json  package.json  vite.config.ts
bridges/baileys/: package-lock.json
config/: aeqi.example.toml
crates/aeqi-architect/: Cargo.toml
crates/aeqi-architect/src/: generator.rs  lib.rs  llm.rs  types.rs
crates/aeqi-indexer/: Cargo.toml
crates/aeqi-indexer/abis/: Beacon.json  Factory.json  Role.module.json  TRUST.json
crates/aeqi-indexer/src/: api.rs  chain.rs  config.rs  decode.rs  lib.rs  main.rs  store.rs
crates/aeqi-inference/: Cargo.toml
crates/aeqi-inference/src/: api.rs  error.rs  lib.rs  router.rs  types.rs
crates/aeqi-inference/src/billing/: mod.rs  role_budget.rs  subscription.rs  treasury.rs  x402.rs
crates/aeqi-inference/src/upstream/: anthropic.rs  deepinfra.rs  deepseek.rs  mod.rs  openai.rs
crates/aeqi-inference/tests/: api_smoke.rs  it_chat_completions.rs
crates/aeqi-ipfs/: Cargo.toml
crates/aeqi-orchestrator/: Cargo.toml
crates/aeqi-pack-google-workspace/: Cargo.toml
crates/aeqi-paymaster/: Cargo.toml
crates/aeqi-redact/: Cargo.toml
crates/aeqi-redact/src/: lib.rs  tests.rs
crates/aeqi-tools/: Cargo.toml
crates/aeqi-trust/: Cargo.toml
deploy/: aeqi-bundler.service  aeqi-paymaster.service
docs/: 4-canonical-templates-rationale.md  CHANGELOG.md  HANDOFF.md  README.md  aa-paymaster-deployment.md  aeqi-economy-plan.md  aeqi-graph-survey.md  aeqi-indexer-spec.md  architecture.md  click-to-dao-smoke-test.md  click-to-dao-troubleshooting.md  company-kernel-release.md  deployment.md  development-workflow.md  indexer-build-log.md  indexer-loop-prompt.md  local-demo.md  mcp-setup.md  monorepo-consolidation-procedure.md  quest-evidence-contract.md  quickstart.md  runtime-platform-separation.md  self-hosting.md  solana-trust-handover.md  wallet-migration-phase-1-to-2.md
docs/design/: as-011-worker-step-context.md
docs/integrations/: telegram-setup.md
docs/internal/: open-source-experience-report-2026-05-02.md
presets/: bootstrap.json
presets/blueprints/: aeiq-company.json  (+7 more)
projects/aeqi-solana/programs/aeqi-token/: Cargo.toml
projects/aeqi-solana/programs/aeqi-token/src/: lib.rs
scripts/: AUDIT.md  aeqi-pre-dispatch.sh  audit-frontend.mjs  dev-isolated-aeqi.sh  dev-triage.sh  public-surface-scan.sh  release-preflight.sh  rollout-sandbox-runtimes.sh  rust-strict-lints.sh  smoke-fresh-install.sh  smoke-prod.mjs  smoke-quickstart-readme.sh  ui-deploy.sh  ux-v4-walk.mjs  ux-v5-walk.mjs  ux-v6-walk.mjs  ux-v7-walk.mjs  visual-route.mjs  webhook-deploy-aeqi.sh
test-contracts/: MockBudget.sol  MockFactory.sol  MockFund.sol  MockFunding.sol  MockGovernance.sol  MockRole.sol  MockTRUST.sol  MockToken.sol  MockVesting.sol
(+527 files in other folders)
