[package]
name = "aeqi-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native Rust EVM indexer for AEQI TRUST contracts. SQLite-backed, async-graphql API."

[dependencies]
# Workspace
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
mini-moka = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

# EVM / blockchain
alloy = { workspace = true }

# GraphQL
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "aeqi-indexer"
path = "src/main.rs"
