[package]
name = "aeqi-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenAI-compatible inference router with three billing lanes — subscription, treasury, x402"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum = { workspace = true }
